--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
-    /*background-color: rgb(160, 196, 255);*/
+    background-color: rgb(160, 196, 255);
     color: white;
     text-decoration-style: bold;
 }
